frontend/src/styles/components/about_us.scss
.outer-about-container {
   height: 100vh; 
   background-image: url(https://cdn.britannica.com/10/152310-050-5A09D74A/Sand-dunes-Sahara-Morocco-Merzouga.jpg);

}


.title-container {
    position: fixed;
    top: 12vh;
    left: 45vw;
}
.title-container h1 {
    font-family: $pacificoc;
    font-size: 35px;
    color: $yellowfont;
}
.about-us-container {
    display: flex;
    justify-content: space-evenly;
   padding-top: 18vh;
   padding-left: 5vh;

}

.about-us-team-item {
    display: flex;
    justify-content: space-evenly;
    border: 1px solid black;
    width: 20vw;
    height: 70vh;
    // background-color: transparent;
    background-color: rgba(250, 123, 4, 0.514);
    border-radius: 2%;
}
.about-us-team-item img{
     height: 30vh;
    width: 20vw;
    border-radius: 2% 2% 0% 0%;;
}

.about-us-team-item h2,h3 {
    display: flex;
    justify-content: center;
    font-family: $pacificoc;
    color: $yellowfont;
    font-size: 30px;
    padding: 3%;
}

.about-us-team-item ul {
    display: flex;
    flex-direction: column;
   align-items: center;
//    justify-content: space-evenly;

}
.about-us-team-item ul li{
    font-size: x-large;
    padding: 2%;
    margin-top: 5%;
    
}
.about-us-team-item ul a{
    font-family: $pacificoc;
    text-decoration: none;
    color: black;
    cursor: pointer;
    color: $yellowfont;
}
.about-us-team-item ul a:hover{
    color: black;
    // color: $yellowfont;
}

